{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 663,
  "lineage": "3cd0fc79-087c-5729-9d14-1c006aea243d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "sensor_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ef54fc430a2975bc",
            "domain": "vpc",
            "id": "eipalloc-032d9bddab8733a71",
            "instance_id": "i-0684af14ce7665773",
            "network_interface_id": "eni-0caafeaf41f2a039c",
            "network_interface_owner_id": "487173517556",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-3-89-77-39.compute-1.amazonaws.com",
            "public_ip": "3.89.77.39",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05dbad26fcfc5da82",
            "domain": "vpc",
            "id": "eipalloc-07f423f493712623f",
            "instance_id": "i-0fdfbd80f721a42ed",
            "network_interface_id": "eni-09b3ba3f0623d3278",
            "network_interface_owner_id": "487173517556",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-54-167-235-53.compute-1.amazonaws.com",
            "public_ip": "54.167.235.53",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sensor-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:487173517556:instance/i-0684af14ce7665773",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0684af14ce7665773",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0caafeaf41f2a039c",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-3-89-77-39.compute-1.amazonaws.com",
            "public_ip": "3.89.77.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d91fcc3fdaf5d7e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad15e5565eed3ada",
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069c2f0229c7f7b1d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.sensor-securitygroup",
            "aws_security_group.webapp-securitygroup",
            "aws_subnet.public-subnet-1",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:487173517556:instance/i-0fdfbd80f721a42ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "production",
                  "Project": "webapp"
                },
                "throughput": 0,
                "volume_id": "vol-0b26fd6f27123e581",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdfbd80f721a42ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09b3ba3f0623d3278",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-54-167-235-53.compute-1.amazonaws.com",
            "public_ip": "54.167.235.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051960bcdf2e257e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad15e5565eed3ada",
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b9c983070ea76bd"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.webapp-securitygroup",
            "aws_subnet.public-subnet-1",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:internet-gateway/igw-098e9ba7adec289cc",
            "id": "igw-098e9ba7adec289cc",
            "owner_id": "487173517556",
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "dependencies": [
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:487173517556:loadbalancer/app/front-lb/c924bce94ef590e9",
            "arn_suffix": "app/front-lb/c924bce94ef590e9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-lb-1440360377.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:487173517556:loadbalancer/app/front-lb/c924bce94ef590e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-lb",
            "security_groups": [
              "sg-08b9c983070ea76bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098d9d9493257af41"
              },
              {
                "subnet_id": "subnet-0ad15e5565eed3ada"
              }
            ],
            "subnets": [
              "subnet-098d9d9493257af41",
              "subnet-0ad15e5565eed3ada"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-05526d5b9280b9ce3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.webapp-securitygroup",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:487173517556:listener/app/front-lb/c924bce94ef590e9/196a3b6b2ebec9e9",
            "certificate_arn": "arn:aws:acm:us-east-1:487173517556:certificate/13593fde-953e-4b88-9854-0ab75d47ad01",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:487173517556:targetgroup/alb-targetgp/2c143e4d8230aeed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:487173517556:listener/app/front-lb/c924bce94ef590e9/196a3b6b2ebec9e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:487173517556:loadbalancer/app/front-lb/c924bce94ef590e9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.securecodezone_cert",
            "aws_lb.front_end",
            "aws_lb_target_group.alb_tgt_group",
            "aws_security_group.webapp-securitygroup",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tgt_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:487173517556:targetgroup/alb-targetgp/2c143e4d8230aeed",
            "arn_suffix": "targetgroup/alb-targetgp/2c143e4d8230aeed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:487173517556:targetgroup/alb-targetgp/2c143e4d8230aeed",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-targetgp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "dependencies": [
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tgtgp_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:487173517556:targetgroup/alb-targetgp/2c143e4d8230aeed-20220630035201304400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:487173517556:targetgroup/alb-targetgp/2c143e4d8230aeed",
            "target_id": "i-0fdfbd80f721a42ed"
          },
          "dependencies": [
            "aws_instance.webapp-instance",
            "aws_key_pair.deployer",
            "aws_lb_target_group.alb_tgt_group",
            "aws_security_group.webapp-securitygroup",
            "aws_subnet.public-subnet-1",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:route-table/rtb-00bdb6c4b45c51d92",
            "id": "rtb-00bdb6c4b45c51d92",
            "owner_id": "487173517556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098e9ba7adec289cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052c8d47b717adc14",
            "route_table_id": "rtb-00bdb6c4b45c51d92",
            "subnet_id": "subnet-0ad15e5565eed3ada"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-link-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d93f414daa8ee9",
            "route_table_id": "rtb-00bdb6c4b45c51d92",
            "subnet_id": "subnet-098d9d9493257af41"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sensor-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:security-group/sg-069c2f0229c7f7b1d",
            "description": "security group that allows access from webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069c2f0229c7f7b1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08b9c983070ea76bd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sensor-securitygroup",
            "name_prefix": "",
            "owner_id": "487173517556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webapp-securitygroup",
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:security-group/sg-08b9c983070ea76bd",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b9c983070ea76bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webapp-securitygroup",
            "name_prefix": "",
            "owner_id": "487173517556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:subnet/subnet-00c0d762e6be8ac52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c0d762e6be8ac52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487173517556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Project": "webapp-migration"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp-migration"
            },
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "dependencies": [
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:subnet/subnet-0ad15e5565eed3ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad15e5565eed3ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487173517556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "dependencies": [
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:subnet/subnet-098d9d9493257af41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098d9d9493257af41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487173517556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            },
            "vpc_id": "vpc-05526d5b9280b9ce3"
          },
          "dependencies": [
            "aws_vpc.private-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private-cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487173517556:vpc/vpc-05526d5b9280b9ce3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0872959642c35431b",
            "default_route_table_id": "rtb-05fbc0aad2959f89d",
            "default_security_group_id": "sg-01caadfa741639f0b",
            "dhcp_options_id": "dopt-0e69e6614bbec1de4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05526d5b9280b9ce3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05fbc0aad2959f89d",
            "owner_id": "487173517556",
            "tags": {
              "Environment": "production",
              "Project": "webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "webapp"
            }
          }
        }
      ]
    }
  ]
}